# ckanext-ua2

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/ua2/: cli.py  helpers.py  plugin.py  views.py
ckanext/ua2/assets/: script.js  webassets.yml
ckanext/ua2/logic/: action.py  auth.py  schema.py  validators.py
ckanext/ua2/schemas/: dataset_schema.json
ckanext/ua2/templates/home/: index.html
ckanext/ua2/templates/snippets/: example_theme_most_popular_groups.html
ckanext/ua2/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/ua2/tests/logic/: test_action.py  test_auth.py  test_validators.py
