[project]
name = "ckanext-ua2"
version = "0.0.1"
description = "just a test"
readme = "README.md"
authors = [
    {name = "maria", email = "maria3108x@gmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "testing", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/ortegi/ckanext-ua2"

[project.entry-points."ckan.plugins"]
ua2 = "ckanext.ua2.plugin:Ua2Plugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
